Display level and experience.

--- a/views/home.jade
+++ b/views/home.jade
@@ -3,3 +3,5 @@ html
         title QuestKey
     body
         h1 Welcome back, #{user.username}!
+        h2 Level #{user.level}
+        h2 #{user.experience} / #{user.getExperienceForLevel()} XP
