Implement increasing experience and leveling up.

--- a/views/home.jade
+++ b/views/home.jade
@@ -5,3 +5,4 @@ html
         h1 Welcome back, #{user.username}!
         h2 Level #{user.level}
         h2 #{user.experience} / #{user.getExperienceForLevel()} XP
+        a(href="/reward_me") Give me more experience!
