Display quests on home page.

--- a/views/home.jade
+++ b/views/home.jade
@@ -6,3 +6,19 @@ html
         h2 Level #{user.level}
         h2 #{user.experience} / #{user.getExperienceForLevel()} XP
         a(href="/reward_me") Give me more experience!
+
+        h2 Quests
+        if quests.length > 0
+            ul
+                each quest in quests
+                    li= quest.title
+        else
+            p You have not started any quests.
+
+        h2 Quests You Own
+        if ownedQuests.length > 0
+            ul
+                each quest in ownedQuests
+                    li= quest.title
+        else
+            p You are not the owner of any quests.
