--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,5 @@
-html
-    head
-        title QuestKey
-    body
-        h1 QuestKey
-        a(href="/login") Login
+extends ./layout.jade
+
+block content
+    h1 QuestKey
+    p Do quests, IRL
