--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,8 +3,13 @@ html
     head
         title QuestKey
     body
-        if user
-            a(href="/logout") Logout
-        else
-            a(href="login") Login
+        ul
+            if user
+                li
+                    a(href="/home") Home
+                li
+                    a(href="/logout") Logout
+            else
+                li
+                    a(href="login") Login
         block content
