Move navbar to an include.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,13 +3,5 @@ html
     head
         title QuestKey
     body
-        ul
-            if user
-                li
-                    a(href="/home") Home
-                li
-                    a(href="/logout") Logout
-            else
-                li
-                    a(href="login") Login
+        include ./includes/navbar.jade
         block content
