Add rewards to quests.

--- a/views/quest.jade
+++ b/views/quest.jade
@@ -3,3 +3,5 @@ extends ./layout.jade
 block content
     h1= quest.title
     p= quest.description
+    p Location: #{quest.location}
+    p Reward: #{quest.reward} XP
