--- a/views/includes/navbar.jade
+++ b/views/includes/navbar.jade
@@ -6,4 +6,4 @@ ul
             a(href="/logout") Logout
     else
         li
-            a(href="login") Login
+            a(href="/login") Login
