--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,7 @@
 extends ./layout.jade
 
-block content
-  h1 QuestKey
-  p Do quests, IRL
+block hero
+  div(class="jumbotron")
+    div(class="container")
+      h1 QuestKey
+      p Gain experience and level up by helping people in your community.
