--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,5 +7,6 @@ html
     script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js")
   body
     include ./includes/navbar.jade
+    block hero
     div(class="container")
       block content
