--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html
     link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css", rel="stylesheet")
     script(src="//code.jquery.com/jquery-2.1.3.min.js")
     script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js")
+    link(href="/css/style.css", rel="stylesheet")
   body
     include ./includes/navbar.jade
     block hero
