--- a/views/home.jade
+++ b/views/home.jade
@@ -14,20 +14,23 @@ block content
 
   a(href=user.path) View your profile
 
-  h2 Quests
-  if quests.length > 0
-    ul
-      each quest in quests
-        li
-          a(href=quest.path)= quest.title
-  else
-    p You have not started any quests.
+  div(class="row")
+    div(class="col-md-6")
+      h2 Quests
+      if quests.length > 0
+        ul
+          each quest in quests
+            li
+              a(href=quest.path)= quest.title
+      else
+        p You have not started any quests.
 
-  h2 Quests You Own
-  if ownedQuests.length > 0
-    ul
-      each quest in ownedQuests
-        li
-          a(href=quest.path)= quest.title
-  else
-    p You are not the owner of any quests.
+    div(class="col-md-6")
+      h2 Quests You Own
+      if ownedQuests.length > 0
+        ul
+          each quest in ownedQuests
+            li
+              a(href=quest.path)= quest.title
+      else
+        p You are not the owner of any quests.
