--- a/views/home.jade
+++ b/views/home.jade
@@ -6,11 +6,16 @@ block homeNavItem
 
 block content
   h1 Welcome back, #{user.username}!
-  img(src=user.avatarUrl)
-  h2 Level #{user.level} (#{user.title})
-  div(class="progress")
-    div(class="progress-bar progress-bar-warning", role="progressbar", aria-valuenow=user.experience, aria=valuemin="0", aria-valuemax=user.experienceForLevel, style="width: " + user.experiencePercentage + "%")
-      span #{user.experience} / #{user.experienceForLevel} XP
+
+  div(class="row")
+    div(class="col-md-1", style="text-align: center")
+      img(src=user.avatarUrl)
+    div(class="col-md-11")
+      h4(style="margin-top: 0px") #{user.username}
+      p(style="font-weight: bold") Level #{user.level} (#{user.title})
+      div(class="progress")
+        div(class="progress-bar progress-bar-warning", role="progressbar", aria-valuenow=user.experience, aria=valuemin="0", aria-valuemax=user.experienceForLevel, style="width: " + user.experiencePercentage + "%")
+          span #{user.experience} / #{user.experienceForLevel} XP
 
   a(href=user.path) View your profile
 
