Add quest list view.

--- a/views/includes/navbar.jade
+++ b/views/includes/navbar.jade
@@ -13,6 +13,9 @@ nav(class="navbar navbar-default navbar-static-top")
           block homeNavItem
             li
               a(href="/home") Home
+          block questsNavItem
+            li
+              a(href="/quests") Quests
       ul(class="nav navbar-nav navbar-right")
         if user
           li
