Add callout to visit the quest list.

--- a/views/home.jade
+++ b/views/home.jade
@@ -29,6 +29,8 @@ block content
               a(href=quest.path)= quest.title
       else
         p You have not started any quests.
+        p
+          a(href="/quests") See available quests!
 
     div(class="col-md-6")
       h2 Quests You Own
