--- a/views/home.jade
+++ b/views/home.jade
@@ -17,7 +17,7 @@ block content
         div(class="progress-bar progress-bar-warning", role="progressbar", aria-valuenow=user.experience, aria=valuemin="0", aria-valuemax=user.experienceForLevel, style="width: " + user.experiencePercentage + "%")
           span #{user.experience} / #{user.experienceForLevel} XP
 
-  a(href=user.path) View your profile
+  a(href=user.path) View your public profile
 
   div(class="row")
     div(class="col-md-6")
