--- a/views/home.jade
+++ b/views/home.jade
@@ -23,10 +23,23 @@ block content
     div(class="col-md-6")
       h2 Quests
       if quests.length > 0
-        ul
-          each quest in quests
-            li
-              a(href=quest.path)= quest.title
+        each quest in quests
+          div
+            a(href=quest.path)= quest.title
+            ul
+              li
+                | Reward: 
+                | 
+                span(class="label label-warning") #{quest.reward} XP
+              li
+                | Status:
+                | 
+                if quest.status === 'in progress'
+                  span(class="label label-warning") In progress
+                else if quest.status === 'done'
+                  span(class="label label-success") Done
+                else if quest.status === 'canceled'
+                  span(class="label label-danger") Canceled
       else
         p You have not started any quests.
         p
@@ -35,9 +48,22 @@ block content
     div(class="col-md-6")
       h2 Quests You Own
       if ownedQuests.length > 0
-        ul
-          each quest in ownedQuests
-            li
-              a(href=quest.path)= quest.title
+        each quest in ownedQuests
+          div
+            a(href=quest.path)= quest.title
+            ul
+              li
+                | Reward: 
+                | 
+                span(class="label label-warning") #{quest.reward} XP
+              li
+                | Status:
+                | 
+                if quest.status === 'in progress'
+                  span(class="label label-warning") In progress
+                else if quest.status === 'done'
+                  span(class="label label-success") Done
+                else if quest.status === 'canceled'
+                  span(class="label label-danger") Canceled
       else
         p You are not the owner of any quests.
