--- a/views/home.jade
+++ b/views/home.jade
@@ -67,5 +67,5 @@ block content
                   span(class="label label-danger") Canceled
       else
         p You are not the owner of any quests.
-        p
-          a(href="/quests/new") Create a new quest
+      p
+        a(class="btn btn-primary", href="/quests/new") New Quest
