Implement user signup.

--- a/views/includes/navbar.jade
+++ b/views/includes/navbar.jade
@@ -23,3 +23,5 @@ nav(class="navbar navbar-default navbar-static-top")
         else
           li
             a(href="/login") Login
+          li
+            a(href="/signup") Sign up
