--- a/views/login.jade
+++ b/views/login.jade
@@ -1,5 +1,9 @@
 extends ./layout.jade
 
+block loginNavItem
+  li(class="active")
+    a(href="/login") Login
+
 block content
   div(class="row")
     div(class="col-md-offset-4 col-md-4")
