--- a/views/signup.jade
+++ b/views/signup.jade
@@ -1,5 +1,9 @@
 extends ./layout.jade
 
+block signupNavItem
+  li(class="active")
+    a(href="/signup") Sign up
+
 block content
   div(class="row")
     div(class="col-md-offset-4 col-md-4")
