--- a/views/questlist.jade
+++ b/views/questlist.jade
@@ -7,7 +7,8 @@ block questsNavItem
 block content
   h1 Quests
 
-  a(class="btn btn-primary", href="/quests/new") New Quest
+  if user
+    a(class="btn btn-primary", href="/quests/new") New Quest
 
   each quest in quests
     div
