--- a/views/includes/navbar.jade
+++ b/views/includes/navbar.jade
@@ -16,6 +16,9 @@ nav(class="navbar navbar-default navbar-static-top")
         block questsNavItem
           li
             a(href="/quests") Quests
+        block leaderboardNavItem
+          li
+            a(href="/leaderboard") Leaderboard
       ul(class="nav navbar-nav navbar-right")
         if user
           li
